--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,7 +43,7 @@ textarea {
 }
 
 .past {
-  background-color: #d3d3d3;
+  background-color: red;
   color: white;
 }
 
@@ -52,7 +52,7 @@ textarea {
   color: white;
 }
 
-.future {
+.box {
   background-color: #77dd77;
   color: white;
 }
